--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,6 +29,7 @@ services:
     container_name: webapp
     image: registry.gitlab.com/rapidcodelab/gopusher/web-app 
     environment: 
+      LICENSE_KEY: #your license key
       LOGIN: demo  # select your login  
       PASSWORD: demo   # select your password
       MONGO_HOST: mongodb
@@ -43,6 +44,7 @@ services:
     container_name: eventsapp
     image: registry.gitlab.com/rapidcodelab/gopusher/events-app  
     environment: 
+      LICENSE_KEY: #your license key
       VAPID_PUBLIC_KEY: cvsdfj34985209384209834 # Enter your VAPID Public Key
       VAPID_PRIVATE_KEY: jf30uf2908tr827f3874fu  # Enter your VAPID Private Key
       SUBJECT_MAIL:  mailto:login@domain.com # Enter your VAPID Subject mail
