--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,7 @@ services:
     depends_on:
       - webapp
       - eventsapp
+      - senderapp
   certbot:
     container_name: certbot
     image: certbot/certbot
