add api configs

--- a/data/nginx/app.conf
+++ b/data/nginx/app.conf
@@ -105,3 +105,39 @@ server {
     include /etc/letsencrypt/options-ssl-nginx.conf;
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 }
+
+
+##  Uncomment if you want to use publisjer api
+# server {
+#     listen 80;
+#     server_name api.rapidcodelab.com;
+#     server_tokens off;
+
+#     location /.well-known/acme-challenge {
+#             root /var/www/certbot;
+#     }
+
+#     location / {
+#         return 301 https://$host$request_uri;
+#     }    
+
+   
+# }
+
+# server {
+#     listen 443 ssl;
+
+#     server_name web.rapidcodelab.com;
+#     server_tokens off;
+
+#     location / {
+#         proxy_pass http://apiapp:3120; #apiapp
+#     }
+
+#     ssl_certificate /etc/letsencrypt/live/api.rapidcodelab.com/fullchain.pem;
+#     ssl_certificate_key /etc/letsencrypt/live/api.rapidcodelab.com/privkey.pem;
+
+#     include /etc/letsencrypt/options-ssl-nginx.conf;
+#     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
+# }
+##  Uncomment if you want to use publisjer api
