--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -73,4 +73,15 @@ services:
     depends_on:
       - mongodb
     links:
-      - mongodb  
+      - mongodb 
+  # ##  Uncomment if you want to use publisjer api 
+  # apiapp: 
+  #   container_name: apiapp
+  #   image: registry.gitlab.com/rapidcodelab/gopusher/api-app 
+  #   environment:
+  #     MONGO_HOST: mongodb
+  #     MONGO_PORT: 27017 
+  #   depends_on:
+  #     - mongodb  
+  #   links:
+  #     - mongodb  
