change image serving to nginx

--- a/data/nginx/app.conf
+++ b/data/nginx/app.conf
@@ -29,7 +29,7 @@ server {
     }
 
     location /images {
-        proxy_pass http://webapp:3100; #webapp
+        root /var/www;
     }
 
     ssl_certificate /etc/letsencrypt/live/web.rapidcodelab.com/fullchain.pem;
